--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // status bar customization
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 }
